# ChangeLog for sci-chemistry/gromacs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Mar 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-9999.ebuild:
  fix multilib-strict

  20 Feb 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Update gromacs 5.0

  16 Feb 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild:
  git-r3 too smart, migrate back to git-2

  05 Feb 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Bash completion changes are comming =D

  05 Feb 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Revert back to git-2 since git-r2  gives problems

  25 Jan 2014; Justin Lecher <jlec@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild:
  Add missing dep for USE=doc

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild:
  Switch from git-2 to git-r3

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild:
  Switch from git-2 to git-r3

  07 Dec 2013; Justin Lecher <jlec@gentoo.org> gromacs-5.0_beta1.ebuild,
  metadata.xml:
  Fix multilib-strict problems

*gromacs-5.0_beta1 (06 Dec 2013)

  06 Dec 2013; Alexey Shvetsov <alexxy@gentoo.org> +gromacs-5.0_beta1.ebuild,
  gromacs-9999.ebuild:
  Add 5.0-beta1 release

  05 Dec 2013; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Make gromacs 9999 build manual again

  05 Dec 2013; Alexey Shvetsov <alexxy@gentoo.org> -Manifest,
  -gromacs-4.5.9999.ebuild, metadata.xml:
  Drop 4.5

  05 Dec 2013; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Update live ebuild to current state

  03 Dec 2013; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  make mdrun target work for gmx live

  03 Dec 2013; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  More updates #2 to gmx live
