@@ -1,2 +1,2 @@
-DIST gromacs-5.0-beta1.tar.gz 18849424 SHA256 c663d570302e7cc91cf732b356fbaa4b39fd8a527927ca4ca13f35797f1ee88b SHA512 86ad4a9169ddb78308f3036c880281ccb0e53f459226d4b66d1175d4e5deb05da772988b981baae2cc3e6468afbc31b5a9bff54b2bd0a3ce326a61f360a01e5c WHIRLPOOL 364c45ef77868b2fd13a1c4b49c287cdb5d4883077b63a70de23f82e178a688ed3aa6cf95d4c4fa2fd7d283c8f03dc04a9442dc28663fd170d044933c4b54128
-DIST regressiontests-5.0-beta1.tar.gz 44826977 SHA256 da629f5fbdf0c1a72c964d1af7709895ce243bb5563b64a34664c6c9006ff2ae SHA512 cd69a4fc78291f6ae21a19e3ff20bac74f79d4b4b78831a6cad6868f9974120739fa3f34b7d3d8f99b93464e19705b45727719cd8aa59f60eb2d86b39c1d5990 WHIRLPOOL 557c71de47c7a4507ba33f198c7954f77460995f4f62e737de6f376a859a7819289ae227434e0cd7501873a5bd4b35f76aa7a7e24fc966d957c727e848743f17
+DIST gromacs-5.0-rc1.tar.gz 54130981 SHA256 852c7048e996f51d6e77abfcd885a4a06ff7f978618b7c1ef9a866f15c3da879 SHA512 decb7e51904daf2bb47c17b2347b7581ac2a1988003028abfd19529c47f05a1e88c3dffba1a552813fd8e594d5f5b872fd7552eb795bc06a2e07dfec656564a0 WHIRLPOOL 72e349b67dfeb4edf5eb0ad4e8396eeaea26960cd636ad5bc382a5d7828a02706534ad95fe085367a9c9b1c3feb761795dd1b0607ec53f90190378837965ba62
+DIST regressiontests-5.0-rc1.tar.gz 60829707 SHA256 7b74fa30cc3dc8b0efd247f92cba4c85de83453cb7f1572c553cbca0dcf7022d SHA512 3e89b1e2cf7953c377a3de8b281da91c05ad1a98c2936e2414898813c4452af6d986d4db269c3124024f2febdd725a83b2941fb3d0a00b3127d868965d81f42a WHIRLPOOL b8ad473bb32368b50d41e627f9b716303f2441eb160870c1da8de70e23ab491b7011020afaf8154321e73c03759582a8121262dcf8b6010b8487fbbce7fa3963
