@@ -2,6 +2,14 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gromacs-5.0.9999 (08 Apr 2014)
+*gromacs-5.0_rc1 (08 Apr 2014)
+
+  08 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org> +gromacs-5.0.9999.ebuild,
+  +gromacs-5.0_rc1.ebuild, -gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild,
+  metadata.xml:
+  [sci-chemistry/gromacs] New ebuilds
+
   05 Mar 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-9999.ebuild:
   fix multilib-strict
 
